--- a/Ex02/exercise_sheet2.ipynb
+++ b/Ex02/exercise_sheet2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -75,50 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "# Setup internal state\n",
-    "sentences = import_corpus(\"corpus_ner.txt\")\n",
-    "\n",
-    "token_vocabulary = Counter()    # set of emission symbols K\n",
-    "tag_vocabulary = Counter()      # set of states S (labels)\n",
-    "\n",
-    "# Count all tokens and tags in the corpus\n",
-    "for sentence in sentences:\n",
-    "    for token, tag in sentence:\n",
-    "        token_vocabulary.update([token])\n",
-    "        tag_vocabulary.update([tag])\n",
-    "\n",
-    "#print(sum([1 for value in token_vocabulary.values() if value == 1]), len(token_vocabulary))\n",
-    "#print(tag_vocabulary)\n",
-    "\n",
-    "UNKNOWN_TOKEN = \"<unknown>\"\n",
-    "\n",
-    "def preprocess(sentence, token_counter):\n",
-    "    processed_sentence = []\n",
-    "\n",
-    "    for token, tag in sentence:\n",
-    "        token_count = token_counter.get(token, 0)\n",
-    "\n",
-    "        if token_count <= 1:\n",
-    "            token = UNKNOWN_TOKEN\n",
-    "\n",
-    "        processed_sentence.append([token, tag])\n",
-    "    return processed_sentence\n",
-    "\n",
-    "#sentences[0], \"\\n\", preprocess(sentences[0], token_vocabulary)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "'''\n",
@@ -140,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "'''\n",
@@ -163,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "'''\n",
@@ -186,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "'''\n",
@@ -218,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "outputs": [
     {
      "data": {
       "text/plain": "{'O': 0.6713460772600558,\n 'B-LOC': 0.07984866587017124,\n 'B-PER': 0.11210673038630029,\n 'B-ORG': 0.08562325766626842,\n 'B-MISC': 0.051075268817204304}"
      },
-     "execution_count": 8,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "'''\n",
@@ -287,13 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "outputs": [
     {
      "data": {
       "text/plain": "{'I-MISC': {'I-MISC': 0.25357710651828297,\n  'B-LOC': 0.001589825119236884,\n  'B-MISC': 0.00397456279809221,\n  'O': 0.7329093799682035,\n  'B-ORG': 0.0047694753577106515,\n  'B-PER': 0.003179650238473768},\n 'B-LOC': {'B-LOC': 0.0006681142475363287,\n  'B-MISC': 0.004342742608986137,\n  'O': 0.8287957240688157,\n  'B-ORG': 0.0025054284282612325,\n  'I-LOC': 0.16368799064640052},\n 'I-PER': {'I-PER': 0.07029478458049887, 'O': 0.9297052154195011},\n 'B-MISC': {'I-MISC': 0.21730103806228374,\n  'B-LOC': 0.0025374855824682814,\n  'B-MISC': 0.00784313725490196,\n  'O': 0.7427912341407151,\n  'B-ORG': 0.010380622837370242,\n  'B-PER': 0.01914648212226067},\n 'O': {'B-LOC': 0.028280890253261703,\n  'B-MISC': 0.02051858348865256,\n  'O': 0.9041881372656507,\n  'B-ORG': 0.021000986733910754,\n  'B-PER': 0.026011402258524285},\n 'B-ORG': {'B-LOC': 0.0008406893652795292,\n  'B-MISC': 0.0018915510718789407,\n  'O': 0.587431693989071,\n  'I-ORG': 0.40920554854981084,\n  'B-PER': 0.0006305170239596469},\n 'I-ORG': {'B-MISC': 0.000900360144057623,\n  'O': 0.5807322929171669,\n  'I-ORG': 0.41686674669867946,\n  'B-PER': 0.0015006002400960385},\n 'B-PER': {'B-LOC': 0.0006704659738518271,\n  'I-PER': 0.5497820985584981,\n  'O': 0.44954743546765},\n 'I-LOC': {'B-LOC': 0.0008992805755395684,\n  'B-MISC': 0.0017985611510791368,\n  'O': 0.875,\n  'B-ORG': 0.0008992805755395684,\n  'I-LOC': 0.12140287769784172}}"
      },
-     "execution_count": 27,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "'''\n",
@@ -362,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "outputs": [
     {
      "data": {
       "text/plain": "0.03916260509004749"
      },
-     "execution_count": 32,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "outputs": [],
    "source": [
     "''''\n",
@@ -410,7 +367,53 @@
     "                               initial_state_probabilities_parameters,\n",
     "                               transition_probabilities_parameters,\n",
     "                               emission_probabilities_parameters):\n",
-    "    pass"
+    "\n",
+    "    # Get all emissions and states of the corpus from the arguments\n",
+    "    states = list(set(transition_probabilities_parameters))\n",
+    "    emissions = [list(emission_probabilities_parameters[state].keys()) for state in states]\n",
+    "    # Flatten list of lists of emissions\n",
+    "    emissions = list(set(np.concatenate(emissions).flat))\n",
+    "\n",
+    "    # Initialize necessary variables for the Viterbi algorithm\n",
+    "    psi = np.full(shape=(len(observed_symbols), len(states)), fill_value=0.0)\n",
+    "    delta = np.full(shape=(len(observed_symbols), len(states)), fill_value=0.0)\n",
+    "\n",
+    "    # Replace symbols in observed_symbols by <unknown> if they appeared at most once in the corpus\n",
+    "    processed_observations = list()\n",
+    "    for symbol in observed_symbols:\n",
+    "        if symbol in emissions:\n",
+    "            processed_observations.append(symbol)\n",
+    "        else:\n",
+    "            processed_observations.append(\"<unknown>\")\n",
+    "\n",
+    "    # Calculate the first delta\n",
+    "    first_symbol = processed_observations[0]\n",
+    "    delta[0] = np.array([initial_state_probabilities_parameters.get(state, eps)\n",
+    "                         * emission_probabilities_parameters[state].get(first_symbol, eps) for state in states])\n",
+    "\n",
+    "    # Induction steps\n",
+    "    for t in range(0, len(processed_observations) - 1):\n",
+    "        for state_j in states:\n",
+    "            current_delta = np.zeros(shape=(len(states)))\n",
+    "            for state_i in states:\n",
+    "                current_delta = delta[t][states.index(state_i)] \\\n",
+    "                                + np.log(transition_probabilities_parameters[state_i].get(state_j, eps)) \\\n",
+    "                                + np.log(emission_probabilities_parameters[state_j].get(processed_observations[t], eps))\n",
+    "\n",
+    "            delta[t + 1, states.index(state_j)] = np.max(current_delta)\n",
+    "            psi[t + 1, states.index(state_j)] = np.argmax(current_delta)\n",
+    "\n",
+    "    # Backtracking starting from the end\n",
+    "    predicted_states = list()\n",
+    "    for t in range(len(processed_observations) - 1, -1, -1):\n",
+    "        if t == len(processed_observations) - 1:\n",
+    "            X_t = np.argmax(delta[-1])\n",
+    "        else:\n",
+    "            X_t = np.argmax(delta[t + 1])\n",
+    "        predicted_states.append(states[X_t])\n",
+    "\n",
+    "    # Return predicted states in reversed order\n",
+    "    return predicted_states[::-1]\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -421,14 +424,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
+   "execution_count": 114,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True state sequence: ['B-LOC', 'O', 'O', 'O', 'O', 'B-LOC', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'B-MISC', 'I-MISC', 'O', 'O']\n",
+      "Predicted state sequence: ['B-LOC', 'O', 'O', 'O', 'O', 'B-LOC', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'B-MISC', 'O', 'O', 'O']\n"
+     ]
+    }
+   ],
    "source": [
-    "most_likely_state_sequence([],\n",
+    "test_sentence = import_corpus(\"corpus_ner.txt\")[100]\n",
+    "test_sentence_states = [state for _, state in test_sentence]\n",
+    "test_sentence_emissions = [emission for emission, _ in test_sentence]\n",
+    "\n",
+    "pred_states = most_likely_state_sequence(test_sentence_emissions,\n",
     "                           estimate_initial_state_probabilities(import_corpus(\"corpus_ner.txt\")),\n",
     "                           estimate_transition_probabilities(import_corpus(\"corpus_ner.txt\")),\n",
-    "                           estimate_emission_probabilities(import_corpus(\"corpus_ner.txt\")))"
+    "                           estimate_emission_probabilities(import_corpus(\"corpus_ner.txt\")))\n",
+    "\n",
+    "print(\"True state sequence:\", test_sentence_states)\n",
+    "print(\"Predicted state sequence:\", pred_states)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
